# claude-osint-agentic-starter

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.claude/commands/: bug-fix.md  commit-ready.md  docker-lab.md  explain-codebase.md  feature-dev.md  mcp-tooling.md  osint-scope.md  pr-description.md  recon-pipeline.md  refactor.md  security-review.md  test-plan.md
.cursor/rules/: claude-agentic-starter.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: OPERATOR_RUNBOOK.md  USING_CLAUDE_CODE.md  architecture.md  feature-brief.md  integration_guide.md
docs/playbooks/: kali-operator-notes.md  passive-osint.md  security-agent-prompts.md
docs/prompts/: kent_system_prompt.md
examples/osint-targets/: authorized-scope.example.txt
mcp/: server-template.json  tool-manifest.example.md
scripts/: check.sh
src/agentic_starter/: __init__.py  cli.py  normalizer.py  targets.py
src/osint_agentic_starter/: estimative_language.py  kent_report_schema.py
tests/: test_cli.py  test_normalizer.py  test_targets.py  test_targets_loader.py
tests/fixtures/: scope_small.txt
